fix(popup): vertically stretched thumbnails (#15)

--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -54,6 +54,15 @@ button:hover {
 
 .tab-thumbnail {
   width: 30%;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tab-thumbnail > img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .tab-meta {
